--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,15 @@ FILE(GLOB SOURCES src/*.cc)
 
 find_library(AVFORMAT avformat)
 find_library(BOOST_FS boost_filesystem)
+find_library(BOOST_AR boost_serialization)
 
 add_library(muzdb SHARED ${SOURCES})
 add_executable(muzscan example/muzscan.cc)
+add_executable(muzdump example/muzdump.cc)
 
-target_link_libraries(muzdb ${AVFORMAT} ${BOOST_FS})
+target_link_libraries(muzdb ${AVFORMAT} ${BOOST_FS} ${BOOST_AR})
 target_link_libraries(muzscan muzdb)
+target_link_libraries(muzdump muzdb)
 
 set_target_properties(muzdb PROPERTIES VERSION "0.0.1")
 
