Modify to Use Boost::Locale

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,12 +7,13 @@ FILE(GLOB SOURCES src/*.cc)
 find_library(AVFORMAT avformat)
 find_library(BOOST_FS boost_filesystem)
 find_library(BOOST_AR boost_serialization)
+find_library(BOOST_LC boost_locale)
 
 add_library(muzdb SHARED ${SOURCES})
 add_executable(muzscan example/muzscan.cc)
 add_executable(muzdump example/muzdump.cc)
 
-target_link_libraries(muzdb ${AVFORMAT} ${BOOST_FS} ${BOOST_AR})
+target_link_libraries(muzdb ${AVFORMAT} ${BOOST_FS} ${BOOST_AR} ${BOOST_LC})
 target_link_libraries(muzscan muzdb)
 target_link_libraries(muzdump muzdb)
 
